GNOME Bugzilla – Bug 670176
Warning when removing a child from a box if the chil has a refcount of 1
Last modified: 2012-03-18 19:41:02 UTC
Created attachment 207715 [details] [review] patch v1 Attached is patch preventing a warning on child removal on a box if that child has a refcount of exactly 1 (the box own the only reference).
Review of attachment 207715 [details] [review]: Looks right
The following fix has been pushed: adf36e2 gtkbox: avoid warning when removing a widget with refcount of 1
Created attachment 210059 [details] [review] gtkbox: avoid warning when removing a widget with refcount of 1 If gtkbox is the only object having a reference on one of its child and that we try to remove it from its container, we endup having a warning when disconnecting a signal after having unparented the widget. Signed-off-by: Lionel Landwerlin <lionel.g.landwerlin@linux.intel.com>